plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.cuonglm'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'

    //Spring Security
    implementation "org.springframework.boot:spring-boot-starter-security"

    // Spring Authorization Server
    implementation "org.springframework.boot:spring-boot-starter-oauth2-authorization-server"

    // Đăng nhập bằng OAuth2 Client (đăng nhập bằng Google, Facebook,...)
    implementation "org.springframework.boot:spring-boot-starter-oauth2-client"

    // Gửi email cho người dùng
    implementation "org.springframework.boot:spring-boot-starter-mail"

    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
    implementation("org.springframework.boot:spring-boot-starter-data-jpa")

    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation
    implementation("org.springframework.boot:spring-boot-starter-validation")

    // shutdown đúng cách bằng gửi post đến /actuator/shutdown (để có thể clean up các thứ... như dùng ddl=create-drop chẳng hạn)
    implementation("org.springframework.boot:spring-boot-starter-actuator")

    // https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-ui
    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9")

    // https://mvnrepository.com/artifact/org.postgresql/postgresql
    implementation("org.postgresql:postgresql:42.7.7")

    // https://mvnrepository.com/artifact/com.cloudinary/cloudinary-http5
    implementation("com.cloudinary:cloudinary-http5:2.3.2")

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

configurations {
    developmentOnly
    runtimeClasspath {
        extendsFrom developmentOnly
    }
}

// Đảm bảo các task Test cũng dùng UTF-8
tasks.withType(Test) {
    // Ép JVM dùng UTF-8 cho tất cả các luồng
    systemProperty 'file.encoding', 'UTF-8'
    jvmArgs = [
            // Thiết lập trực tiếp Stdout và Stderr encoding
            '-Dstdout.encoding=UTF-8',
            '-Dstderr.encoding=UTF-8'
    ]
}

// Đảm bảo các task JavaExec cũng dùng UTF-8
tasks.withType(JavaExec) {
    // Thiết lập trực tiếp Stdout và Stderr encoding
    systemProperty 'file.encoding', 'UTF-8'
    jvmArgs = [
            '-Dstdout.encoding=UTF-8',
            '-Dstderr.encoding=UTF-8'
    ]
}

tasks.named('test') {
    useJUnitPlatform()
}
